# shopnow-server

./: .env  pyproject.toml
src/: app.py  config.py  main.py
src/database/: connetDB.py
src/routes/: __init__.py  orderRoutes.py  produtRoutes.py  userRoutes.py
test/: test_connectDB.py  test_main.py
