[project]
name = "shopnow-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "cors>=1.0.1",
    "uvicorn>=0.34.2",
    "redis>=5.2.1",
    "mongoose>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
