[tool.poetry]
name = "shopnow-server"
version = "0.1.0"
description = ""
authors = ["mradul kumar katiyar <dev.mradul@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pymongo = "^4.12.0"
dotenv = "^0.9.9"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
